# dotflow

./: .env-example  .gitignore  .gitmodules  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  LAST_VERSION  LICENSE  README.md  cli.py  dotflow.py  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  requirements-dev.txt  requirements.txt  search.html  setup.py  sitemap.xml  tox.ini
.code_quality/: ruff.toml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: code-quality.yml  python-app-code-coverage.yml  python-app-code-quality.yml  python-app-test.yml  python-publish-pypi.yml  test.yml
0.1/: 404.html  index.html  objects.inv  sitemap.xml
0.1/assets/: style.css
assets/: style.css
docs/: index.md
docs/assets/: style.css
docs/nav/: getting-started.md
docs/pt/: index.md
docs_src/advanced/: notifications_on_failure.py  parallel_with_groups.py
docs_src/async/: async_action.py
docs_src/backoff/: backoff.py
docs_src/basic/: simple_class_workflow.py  simple_cli.py  simple_function_workflow.py  simple_function_workflow_with_error.py
docs_src/callback/: task_callback.py  workflow_callback_failure.py  workflow_callback_success.py
docs_src/checkpoint/: checkpoint.py  checkpoint_input_change.py
docs_src/cli/: cli_schedule.py  cli_with_callback.py  cli_with_initial_context.py  cli_with_mode.py  cli_with_output_context.py  cli_with_path.py  cli_with_workflow.py  execution_mode.py  initial_context.py
docs_src/config/: config.py  log_default.py  log_default_json.py  log_opentelemetry.py  log_opentelemetry_basic.py  log_opentelemetry_export.py  log_provider.py  log_sentry.py  metrics_opentelemetry.py  metrics_opentelemetry_basic.py  notify_default.py  notify_provider.py  sentry_full.py  storage_default.py  storage_provider.py  tracer_opentelemetry.py  tracer_opentelemetry_basic.py  tracer_sentry.py
docs_src/context/: context.py  many_contexts.py
docs_src/errors/: errors.py
docs_src/first_steps/: first_steps.py
docs_src/group/: step_with_groups.py
docs_src/initial_context/: initial_context.py
docs_src/name/: workflow_with_name.py
docs_src/notify/: notify_discord.py  notify_telegram.py
docs_src/output/: step_class_result_context.py  step_class_result_storage.py  step_class_result_task.py  step_function_result_context.py  step_function_result_storage.py  step_function_result_task.py
docs_src/plugins/: logs.py  metrics.py
docs_src/previous_context/: previous_context.py
docs_src/process_mode/: background.py  parallel.py  parallel_group.py  sequential.py  sequential_group.py
docs_src/retry/: retry.py  retry_delay.py
docs_src/scheduler/: scheduler_cron.py  scheduler_default.py  scheduler_overlap.py  scheduler_provider.py  scheduler_resume.py  scheduler_resume_pipeline.py
docs_src/server/: server_default.py  server_with_retry.py  server_with_storage.py
docs_src/storage/: storage_file.py  storage_gcs.py  storage_mongodb.py  storage_s3.py
docs_src/timeout/: timeout.py
docs_src/workflow/: keep_going_true.py  sequential_group_mode.py
dotflow/: __init__.py  config.py  constants.py  log.py  logging.py  main.py  notify.py  settings.py  storage.py  types.py
dotflow/abc/: api.py  context.py  file.py  flow.py  http.py  log.py  logs.py  metrics.py  notify.py  scheduler.py  server.py  storage.py  tcp.py  tracer.py  workflow.py
dotflow/cli/: __init__.py  command.py  setup.py  storage.py  validator.py
dotflow/cloud/: core.py
dotflow/core/: __init__.py  action.py  actions.py  config.py  config_file.py  context.py  controller.py  dotflow.py  engine.py  error.py  events.py  exception.py  execution.py  executor.py  fingerprint.py  logging.py  module.py  plugin.py  subscribers.py  task.py  utils.py  workflow.py
dotflow/plugins/: __init__.py  logs.py  metrics.py  notify.py  storage.py
dotflow/providers/: __init__.py  api_default.py  log_default.py  log_opentelemetry.py  log_sentry.py  metrics_default.py  metrics_opentelemetry.py  notify_default.py  notify_discord.py  notify_telegram.py  scheduler_cron.py  scheduler_default.py  server_api.py  server_default.py  storage_default.py  storage_file.py  storage_gcs.py  storage_s3.py  tracer_default.py  tracer_opentelemetry.py  tracer_sentry.py
dotflow/testing/: __init__.py  storage_contract.py
dotflow/utils/: __init__.py  error_handler.py  print.py  tools.py  visualizer.py
examples/: __init__.py  cli.py  cli_with_initial_context.py  cli_with_mode.py  cli_with_output.py  cli_with_output_context.py  cli_with_path.py  simple_class_workflow.py  simple_cli.py  step_class_result_context.py  step_class_result_storage.py  step_class_result_task.py  step_function_result_context.py  step_function_result_storage.py  step_function_result_task.py  step_with_initial_context.py  step_with_many_contexts.py  step_with_previous_context.py  workflow_keep_going_true.py  workflow_step_callback.py  workflow_with_callback_failure.py  workflow_with_callback_success.py
examples/etl_flow/: main.py  pyproject.toml
nav/cloud/: index.html
nav/concepts/: index.html
nav/examples/: index.html
nav/getting-started/: index.html
nav/how-to/: index.html
nav/integrations/: index.html
nav/learn/: index.html
pt/: index.html
samples/: main.py  simple_class_workflow.py  simple_function_workflow.py  simple_workflow.py  step_class_result_context.py  step_class_result_storage.py  step_function_result_context.py  step_function_result_storage.py  step_function_result_task.py  workflow_callback_failure.py  workflow_callback_success.py  workflow_keep_going_true.py  workflow_previous_context.py  workflow_retry.py  workflow_step_callback.py  workflow_with_callback_failure.py  workflow_with_callback_success.py  workflow_withcallback_failure.py
scripts/: __init__.py  install_local.py  update_docs.py
search/: search_index.json
tests/: integration.py  mocks.py  test_flow.py  test_integration.py  test_utils.py
tests/cli/: conftest.py  test_login_command.py  test_start_command.py
tests/core/: __init__.py  test_abc_log.py  test_action.py  test_actions.py  test_config.py  test_config_file.py  test_context.py  (+27 more)
(+848 files in other folders)
