[project]
name = "dotflow"
version = "0.2.0.dev-1"
authors = [
  { name="Fernando Celmer", email="email@fernandocelmer.com" },
]
license = {file = "LICENSE"}
description = "DotFlow"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
  'Development Status :: 4 - Beta',
  "Operating System :: OS Independent",
  'Intended Audience :: Developers',
  'Natural Language :: English',
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/linux-profile/dotflow"
Issues = "https://github.com/linux-profile/dotflow/issues"
Repository = "https://github.com/linux-profile/dotflow"
Documentation = "https://github.com/linux-profile/dotflow/blob/master/README.md"

[tool.poetry]
name = "dotflow"
version = "0.2.0.dev-1"
description = "DotFlow"
authors = ["Fernando Celmer <email@fernandocelmer.com>"]
readme = "README.md"
license = "GPL-3.0-only"
package-mode = true
requires-python = ">=3.6"
homepage = "https://github.com/linux-profile/dotflow"
documentation = "https://github.com/linux-profile/dotflow"
repository = "https://github.com/linux-profile/dotflow"
classifiers = [
  'Development Status :: 4 - Beta',
  "Operating System :: OS Independent",
  'Intended Audience :: Developers',
  'Natural Language :: English',
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[tool.poetry.scripts]
flow = 'dotflow.main:main'

[tool.poetry.dependencies]
python = ">=3.6"

[tool.poetry.group.dev.dependencies]
build = "^1.2.2.post1"
pytest = "^8.3.4"
flake8 = "^7.1.1"
tox = "^4.23.2"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocs-simple-blog = "^0.0.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
